--- a/src/view/CopyWindow.mxml
+++ b/src/view/CopyWindow.mxml
@@ -5,39 +5,34 @@
 					  xmlns:components="view.components.*"
 					  xmlns:view="view.*"
 					  width="100%" height="100%" backgroundAlpha="0.5" backgroundColor="#CCCCCC"
-					  show="this_showHandler(event)">
+					  show="showHandler()">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	<fx:Script>
 		<![CDATA[
-			import dragonBones.utils.ConstValues;
 			
 			import model.CopyDataProxy;
 			import model.ImportDataProxy;
 			
-			import mx.events.FlexEvent;
-			import mx.managers.PopUpManager;
+			private static const CENTER_SPACE:int = 24;
 			
-			private static const CENTER_SPACE:int=28;
-			
-			public function closeCopySession():void
+			private function showHandler():void
 			{
-				DBGATrackerManager.tracker.trackPageview("/");
-				
-				this.visible = false;
-				CopyDataProxy.getInstance().closeCopySession();
+				CopyDataProxy.getInstance().openNewCopySession();
 			}
 			
-			private function cancelBtn_onClick(event:MouseEvent):void
+			private function closeHandler(event:Event):void
 			{
 				DBGATrackerManager.tracker.trackEvent("copyWindow", "close");
 				closeCopySession();
 			}
 			
-			protected function this_showHandler(event:FlexEvent):void
+			public function closeCopySession():void
 			{
-				CopyDataProxy.getInstance().openNewCopySession()
+				DBGATrackerManager.tracker.trackPageview("/");
+				this.visible = false;
+				CopyDataProxy.getInstance().closeCopySession();
 			}
 			
 			protected function copyBone():void
@@ -49,18 +44,18 @@
 			protected function copyBehavior():void
 			{
 				DBGATrackerManager.tracker.trackEvent("copyWindow", "copyBehavior");
-				CopyDataProxy.getInstance().executeBehaviorCopy()
+				CopyDataProxy.getInstance().executeBehaviorCopy();
 			}
 			
 			protected function save():void
 			{
 				DBGATrackerManager.tracker.trackEvent("copyWindow", "save");
-				CopyDataProxy.getInstance().save();
+				//CopyDataProxy.getInstance().save();
 			}
 			
 		]]>
 	</fx:Script>
-	<s:Panel left="20" right="20" top="20" bottom="20" title="{resourceManager.getString('resources','copyBehaviors')}">
+	<s:TitleWindow left="20" right="20" top="20" bottom="20" title="{resourceManager.getString('resources','copyBehaviors')}" close="closeHandler(event)">
 		<s:VGroup width="100%" height="100%" gap="10" paddingBottom="10" paddingLeft="10"
 				  paddingRight="10" paddingTop="10">
 			<s:HGroup width="100%" gap="0">
@@ -69,108 +64,77 @@
 				<s:Label width="100%" text="{resourceManager.getString('resources','target')}" verticalAlign="bottom" textAlign="center" fontWeight="bold"/>
 			</s:HGroup>
 			<s:HGroup width="100%" gap="0">
-				<s:DropDownList id="sourceArmatures" width="100%"
-								labelField="{ConstValues.AT + ConstValues.A_NAME}"
-								selectedItem="@{CopyDataProxy.getInstance().selectedSourceArmature}">
-					<s:dataProvider>
-						<s:XMLListCollection source="{CopyDataProxy.getInstance().copyArmaturesData}"/>
-					</s:dataProvider>
-				</s:DropDownList>
+				<s:DropDownList width="100%"
+								labelField="name"
+								dataProvider="{ImportDataProxy.getInstance().armaturesAC}"
+								selectedItem ="@{CopyDataProxy.getInstance().sourceArmatureProxy.armatureData}"
+								/>
 				<s:Spacer width="{CENTER_SPACE}"/>
-				<s:DropDownList id="destinationArmatures" width="100%"
-								selectedItem="@{CopyDataProxy.getInstance().selectedDestinationArmature}"
-								labelField="{ConstValues.AT + ConstValues.A_NAME}">
-					<s:dataProvider>
-						<s:XMLListCollection source="{CopyDataProxy.getInstance().copyArmaturesData}"/>
-					</s:dataProvider>
-				</s:DropDownList>
+				<s:DropDownList width="100%"
+								labelField="name"
+								dataProvider="{ImportDataProxy.getInstance().armaturesAC}"
+								selectedItem="@{CopyDataProxy.getInstance().targetArmatureProxy.armatureData}"
+								/>
 			</s:HGroup>
 			<mx:VDividedBox id="dividedBox" width="100%" height="100%">
 				<mx:TabNavigator id="boneAndBehavior" width="100%" height="100%" paddingBottom="2" paddingLeft="2"
 								 paddingRight="2" paddingTop="2">
 					<s:NavigatorContent label="{resourceManager.getString('resources','bone')}" width="100%" height="100%">
-						<s:HGroup width="100%" height="100%" gap="0">
+						<s:HGroup width="100%" height="100%" gap="0" verticalAlign="middle">
 							<mx:Tree width="100%" height="100%"
-									 labelField="{ConstValues.AT + ConstValues.A_NAME}" textRollOverColor="#CCCCCC"
-									 textSelectedColor="#CCCCCC"
+									 textRollOverColor="#CCCCCC" textSelectedColor="#CCCCCC"
 									 folderClosedIcon="@Embed(source='./assets/armature_icon.png')"
 									 folderOpenIcon="@Embed(source='./assets/armature_open_icon.png')"
-									 defaultLeafIcon="@Embed(source='./assets/bone_icon.png')">
-								<mx:dataProvider>
-									<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedSourceBoneList}">
-									</s:XMLListCollection>
-								</mx:dataProvider>
-							</mx:Tree>
-							<s:Group height="100%" width="{CENTER_SPACE}">
-								<s:Button icon="@Embed(source='./assets/copy_icon.png')" 
-										  width="24" height="24" horizontalCenter="0" verticalCenter="0"  
-										  enabled="{CopyDataProxy.getInstance().boneCopyable}" 
-										  click="copyBone()"/>
-							</s:Group>
+									 defaultLeafIcon="@Embed(source='./assets/bone_icon.png')"
+									 labelField="@name"
+									 dataProvider="{CopyDataProxy.getInstance().sourceArmatureProxy.bonesMC}"
+									 />
+							<s:Button icon="@Embed(source='./assets/copy_icon.png')" 
+									  width="24" height="24" horizontalCenter="0" verticalCenter="0"
+									  enabled="{CopyDataProxy.getInstance().boneCopyable}"
+									  click="copyBone()"/>
 							<mx:Tree width="100%" height="100%"
-									 labelField="{ConstValues.AT + ConstValues.A_NAME}" textRollOverColor="#CCCCCC"
-									 textSelectedColor="#CCCCCC"
+									 textRollOverColor="#CCCCCC" textSelectedColor="#CCCCCC"
 									 folderClosedIcon="@Embed(source='./assets/armature_icon.png')"
 									 folderOpenIcon="@Embed(source='./assets/armature_open_icon.png')"
-									 defaultLeafIcon="@Embed(source='./assets/bone_icon.png')">
-								<mx:dataProvider>
-									<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedDestinaionBonelist}">
-									</s:XMLListCollection>
-								</mx:dataProvider>
-							</mx:Tree>
+									 defaultLeafIcon="@Embed(source='./assets/bone_icon.png')"
+									 labelField="@name"
+									 dataProvider="{CopyDataProxy.getInstance().targetArmatureProxy.bonesMC}"
+									 />
 						</s:HGroup>
 					</s:NavigatorContent>
 					<s:NavigatorContent label="{resourceManager.getString('resources','behavior')}" width="100%" height="100%">
-						<s:HGroup width="100%" height="100%" gap="0">
-							<s:DataGrid width="100%" height="100%" sortableColumns="false" gridClick="CopyDataProxy.getInstance().playSourceBehavior(event.item)"  selectionMode="multipleRows" selectedItems="@{CopyDataProxy.getInstance().selectedMultipleSourceBehaviors}">
-								<s:columns>
-									<s:ArrayList>
-										<s:GridColumn dataField="{ConstValues.AT + ConstValues.A_NAME}" headerText="{resourceManager.getString('resources','behaviorList')}"/>
-									</s:ArrayList>
-								</s:columns>
-								<s:dataProvider>
-									<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedSourceBehaviorList}">
-									</s:XMLListCollection>
-								</s:dataProvider>
-							</s:DataGrid>
-							<s:Group height="100%" width="{CENTER_SPACE}">
-								<s:Button icon="@Embed(source='./assets/copy_icon.png')" 
-										  width="24" height="24" horizontalCenter="0" verticalCenter="0"  
-										  enabled="{CopyDataProxy.getInstance().behaviorCopyable}" 
-										  click="copyBehavior()"/>
-							</s:Group>
-							<s:Group width="100%" height="100%">
-								<s:DataGrid width="100%" height="100%" sortableColumns="false" gridClick="CopyDataProxy.getInstance().playDestinationBehavior(event.item)" selectionMode="multipleRows" selectedItems="@{CopyDataProxy.getInstance().selectedMultipleDestinationBehaviors}">
-									<s:columns>
-										<s:ArrayList>
-											<s:GridColumn dataField="{ConstValues.AT + ConstValues.A_NAME}" headerText="{resourceManager.getString('resources','behaviorList')}"/>
-										</s:ArrayList>
-									</s:columns>
-									<s:dataProvider>
-										<s:XMLListCollection source="{CopyDataProxy.getInstance().selectedDestinaionBehaviorList}">
-										</s:XMLListCollection>
-									</s:dataProvider>
-								</s:DataGrid>
-								<s:Button right="0" width="50" label="del"
-										  click="CopyDataProxy.getInstance().executeBehaviorDelete()"
-										  enabled="{CopyDataProxy.getInstance().behaviorDeletable}"/>
-							</s:Group>
+						<s:HGroup width="100%" height="100%" gap="0" verticalAlign="middle">
+							<s:List width="100%" height="100%" borderColor="#000000"
+									labelField="name"
+									dataProvider="{CopyDataProxy.getInstance().sourceArmatureProxy.animationsAC}"
+									selectedItem ="@{CopyDataProxy.getInstance().sourceArmatureProxy.selecteAnimationData}"
+									/>
+							<s:Button icon="@Embed(source='./assets/copy_icon.png')" 
+									  width="24" height="24" horizontalCenter="0" verticalCenter="0"
+									  enabled="{CopyDataProxy.getInstance().behaviorCopyable}"
+									  click="copyBehavior()"/>
+							<s:List width="100%" height="100%" borderColor="#000000"
+									labelField="name"
+									dataProvider="{CopyDataProxy.getInstance().targetArmatureProxy.animationsAC}"
+									selectedItem ="@{CopyDataProxy.getInstance().targetArmatureProxy.selecteAnimationData}"
+									/>
 						</s:HGroup>
 					</s:NavigatorContent>
 				</mx:TabNavigator>
-				<s:HGroup width="100%" height="100%" gap="{CENTER_SPACE}">
-					<components:AnimationReviewPanel width="100%" height="100%" armature="{CopyDataProxy.getInstance().sourceDisplayArmature}"/>
-					<components:AnimationReviewPanel width="100%" height="100%" armature="{CopyDataProxy.getInstance().destinationDisplayArmature}"/>
+				<s:HGroup width="100%" height="100%" gap="0">
+					<view:ArmatureViewer width="100%" height="100%" armature="{CopyDataProxy.getInstance().sourceArmatureProxy.armature}"/>
+					<s:Spacer width="{CENTER_SPACE}"/>
+					<view:ArmatureViewer width="100%" height="100%" armature="{CopyDataProxy.getInstance().targetArmatureProxy.armature}"/>
 				</s:HGroup>
 			</mx:VDividedBox>
-			
 			<s:HGroup width="100%" gap="0">
-				<s:Spacer width="800%"/>
-				<s:Button label="{resourceManager.getString('resources','save')}" click="save()"/>
 				<s:Spacer width="100%"/>
-				<s:Button label="{resourceManager.getString('resources','cancel')}" click="closeCopySession()"/>
-				<s:Spacer width="800%"/>
+				<s:Button label="{resourceManager.getString('resources','save')}" click="save()"/>
+				<s:Spacer width="{CENTER_SPACE}"/>
+				<s:Button label="{resourceManager.getString('resources','cancel')}" click="closeHandler(event)"/>
+				<s:Spacer width="100%"/>
 			</s:HGroup>
 		</s:VGroup>
-	</s:Panel>
+	</s:TitleWindow>
 </s:SkinnableContainer>
